<resources>
    <string name="login">LOG IN</string>
    <string name="yourEmail">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="attempts">Attempts Left:</string>
    <string name="number">New Text</string>
    <string name="cancel">Cancel</string>
    <string name="woring">Wrong Credentials</string>
    <string name="redirecting">Redirecting…</string>
    <string name="email">Username or Email</string>
    <string name="createAcount">No account yet? Create one</string>
    <string name="name">Full Name</string>
    <string name="singup">Create Account</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="birthday">Birthday</string>
    <string name="failed">Login failed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="map">Map</string>
    <string name="rent_bike">Rent Bike</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="sign_out">Sign out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logo">Logo</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bikeNumber">Bike Number</string>
    <string name="qrScan">Qr Scan</string>
    <string name="request">Request</string>
    <string name="facebook">LOGIN WITH FACEBOOK</string>
    <string name="twitter">LOGIN WITH TWITTER</string>
    <string name="google">LOGIN WITH GOOGLE</string>
    <string name="title_activity_map">Map</string>
    <string name="userName">Mohammed Alefrangy</string>
    <string name="credits">Credits: 11 NIS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_application_id" translatable="false">972579082935927</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb972579082935927</string>
    <string name="twitter_consumer_key" translatable="false">XbuNeoJUiIytFoq9T6Lug</string>
    <string name="twitter_consumer_secret" translatable="false">0NTggyofUI30OJtP8bjpFDr54SLTg59emok8skADvB8</string>
    <string name="entercode">Enter the voucher code or scan it</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_where_vouchers">Map</string>
    <string name="start_timr">Start Time</string>
    <string name="stop_timr">Stop Timr</string>
    <string name="estimated_charges">Estimated charges: %.2f NIS</string>
    <string name="connected">Connected</string>
    <string name="park_the_bike">Reopen the bike</string>
    <string name="return_the_bike">Return the bike</string>
    <string name="rented_bike_number">Rented Bike Number:</string>
    <string name="app_name">SmartBikes</string>
</resources>
